--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="mode-switch">
       <p>Dark Mode</p>
       <label class="switch">
-        <input id="togBtn" type="checkbox" onclick="ModeSwitch()">
+        <input id="togBtn" type="checkbox" onclick="ModeSwitch() label="ModeSwitch">
         <span class="slider round"></span>
       </label>
     </div>
@@ -27,7 +27,7 @@
   <div class="container--follows">
     <div class="follows card-bg-color follows--facebook">
       <div class="container--user-tag">
-        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-facebook.svg" alt="Facebook Logo">
         <p class="user-tag">@nathanf</p>
       </div>
       <div class="container--user-score">
@@ -35,13 +35,13 @@
         <p class="follows-text">F O L L O W E R S</p>
       </div>
       <div class="container--follows-daily">
-        <img class="follows--up-down" src="./images/icon-up.svg">
+        <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
         <p class="follows-daily-number">12 Today</p>
       </div>
     </div>
     <div class="follows card-bg-color follows--twitter">
       <div class="container--user-tag">
-        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-twitter.svg" alt="Twitter Logo">
         <p class="user-tag">@nathanf</p>
       </div>
       <div class="container--user-score">
@@ -49,13 +49,13 @@
         <p class="follows-text">F O L L O W E R S</p>
       </div>
       <div class="container--follows-daily">
-        <img class="follows--up-down" src="./images/icon-up.svg">
+        <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
         <p class="follows-daily-number">99 Today</p>
       </div>
     </div>
     <div class="follows card-bg-color follows--instagram">
       <div class="container--user-tag">
-        <img src="./images/icon-instagram.svg">
+        <img src="./images/icon-instagram.svg" alt="Instagram Logo">
         <p class="user-tag">@realnathanf</p>
       </div>
       <div class="container--user-score">
@@ -63,13 +63,13 @@
         <p class="follows-text">F O L L O W E R S</p>
       </div>
       <div class="container--follows-daily">
-        <img class="follows--up-down" src="./images/icon-up.svg">
+        <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
         <p class="follows-daily-number">1099 Today</p>
       </div>
     </div>
     <div class="follows card-bg-color follows--youtube">
       <div class="container--user-tag">
-        <img src="./images/icon-youtube.svg">
+        <img src="./images/icon-youtube.svg" alt="Youtube Logo">
         <p class="user-tag">Nathan F.</p>
       </div>
       <div class="container--user-score">
@@ -77,7 +77,7 @@
         <p class="follows-text">S U B S C R I B E R S</p>
       </div>
       <div class="container--follows-daily">
-        <img class="follows--up-down" src="./images/icon-down.svg">
+        <img class="follows--up-down" src="./images/icon-down.svg" alt="Down percentage">
         <p class="follows-daily-number">144 Today</p>
       </div>
     </div>
@@ -88,12 +88,12 @@
     <div class="overview--card card-bg-color overview--card-facebook">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Page Views</p>
-        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-facebook.svg" alt="Facebook Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">87</p>
         <div class="overview--card-percentage-up">
-          <img class="follows--up-down" src="./images/icon-up.svg">
+          <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
           <p>3%</p>
         </div>
       </div>
@@ -101,12 +101,12 @@
     <div class="overview--card card-bg-color overview--card-facebook">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Likes</p>
-        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-facebook.svg" alt="Facebook Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">52</p>
         <div class="overview--card-percentage-down">
-          <img class="follows--up-down" src="./images/icon-down.svg">
+          <img class="follows--up-down" src="./images/icon-down.svg" alt="Down percentage">
           <p>2%</p>
         </div>
       </div>
@@ -114,12 +114,12 @@
     <div class="overview--card card-bg-color overview--card-instagram">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Likes</p>
-        <img src="./images/icon-instagram.svg">
+        <img src="./images/icon-instagram.svg" alt="Instagram Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">5462</p>
         <div class="overview--card-percentage-up">
-          <img class="follows--up-down" src="./images/icon-up.svg">
+          <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
           <p>2257%</p>
         </div>
       </div>
@@ -127,12 +127,12 @@
     <div class="overview--card card-bg-color overview--card-instagram">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Profile Views</p>
-        <img src="./images/icon-instagram.svg">
+        <img src="./images/icon-instagram.svg" alt="Instagram Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">52k</p>
         <div class="overview--card-percentage-up">
-          <img class="follows--up-down" src="./images/icon-up.svg">
+          <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
           <p>1375%</p>
         </div>
       </div>
@@ -140,12 +140,12 @@
     <div class="overview--card card-bg-color overview--card-twitter">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Retweets</p>
-        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-twitter.svg" alt="Twitter logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">117</p>
         <div class="overview--card-percentage-up">
-          <img class="follows--up-down" src="./images/icon-up.svg">
+          <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
           <p>303%</p>
         </div>
       </div>
@@ -153,12 +153,12 @@
     <div class="overview--card card-bg-color overview--card-twitter">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Likes</p>
-        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-twitter.svg" alt="Twitter Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">507</p>
         <div class="overview--card-percentage-up">
-          <img class="follows--up-down" src="./images/icon-up.svg">
+          <img class="follows--up-down" src="./images/icon-up.svg" alt="Up percentage">
           <p>553%</p>
         </div>
       </div>
@@ -166,12 +166,12 @@
     <div class="overview--card card-bg-color overview--card-youtube">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Likes</p>
-        <img src="./images/icon-youtube.svg">
+        <img src="./images/icon-youtube.svg" alt="Youtube Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">107</p>
         <div class="overview--card-percentage-down">
-          <img class="follows--up-down" src="./images/icon-down.svg">
+          <img class="follows--up-down" src="./images/icon-down.svg" alt="Down percentage">
           <p>19%</p>
         </div>
       </div>
@@ -179,12 +179,12 @@
     <div class="overview--card card-bg-color overview--card-youtube">
       <div class="container--overview-card-title">
         <p class="overview--card-title">Total Views</p>
-        <img src="./images/icon-youtube.svg">
+        <img src="./images/icon-youtube.svg" alt="Youtube Logo">
       </div>
       <div class="container--overview-card-score">
         <p class="overview--card-score">1407</p>
         <div class="overview--card-percentage-down">
-          <img class="follows--up-down" src="./images/icon-down.svg">
+          <img class="follows--up-down" src="./images/icon-down.svg" alt="Down percentage">
           <p>12%</p>
         </div>
       </div>
