--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="mode-switch">
       <p>Dark Mode</p>
       <label class="switch">
-        <input id="togBtn" type="checkbox" onclick="ModeSwitch()>
+        <input id="togBtn" type="checkbox" onclick="ModeSwitch()">
         <span class="slider round"></span>
       </label>
     </div>
